# grammar-activity-prediction

./: .gitignore  LICENSE  README.md
cpp/madios/: ADIOSUtils.h  BasicSymbol.cpp  BasicSymbol.h  CMakeLists.txt  EquivalenceClass.cpp  EquivalenceClass.h  LexiconUnit.h  License.txt  ModifiedADIOS.pro  ParseTree.h  RDSGraph.cpp  RDSGraph.h  RDSNode.cpp  RDSNode.h  README  SearchPath.cpp  SearchPath.h  SignificantPattern.cpp  SignificantPattern.h  SpecialLexicons.cpp  SpecialLexicons.h  main.cpp
cpp/madios/maths/: Constants.h  ProbabilityDistributions.h  STLArithmetics.h  special.cpp  special.h
cpp/madios/maths/tnt/: array1d.h  array2d.h  array3d.h  jama_chol.h  jama_chol_funcs.h  jama_eig.h  jama_lu.h  jama_lu_funcs.h  jama_qr.h  jama_rq.h  jama_svd.h  jama_svd_funcs.h  random.h  sparse_array2d.h
cpp/madios/test/: corpus.txt
cpp/madios/utils/: MiscUtils.cpp  MiscUtils.h  Stringable.cpp  Stringable.h  TimeFuncs.cpp  TimeFuncs.h
matlab/kinect/: getAlignedSkeletons.m  getAlignedSkeletonsCAD.m  getAnchor.m  getGroundTruthBoxes.m  getObjectPos.m  initialize.m  labelFirstFrame.m  main.m  skeleton_plot.m  trackObjects.m  visCADSkeletons.m  visDetectedBoxes.m  visSkeletonDepth.m
python/: affordance.py  affordance_lstm.py  affordance_test.py  bdbparser.py  config.py  dataparser.py  grammarutils.py  inference.py  learning.py  metadata.py  parse_features.py  parsegraph.py  plyutils.py  qualitative.py  requirements.txt  rrt.py  skutils.py  subactivity.py  subactivity_lstm.py  subactivity_test.py  supplementary.py  vgg_fine_tune.py  vizutil.py
(+10 files in other folders)
